# dukes

./: .gitignore  README.md  pyproject.toml  release  requirements.txt
.virtual_documents/tutorial/: tutorial.ipynb
examples/: tutorial.ipynb
src/doom/: __init__.py  doomMain.py  galMassFunction.py
src/duke/: __init__.py  constant.py  dukeMain.py  galDensity.py
src/duke/dat/: densityParamFit.py
src/dukes/: __init__.py  constant.py  dukesMain.py  galDensity.py  sysmsg.py  utils.py
src/dukes/dat/: cosmicAgeFit  cosmicAgeFit.py  galcticAreaDensityFit.py
tests/: doom_example.py  duke_example.py  dukes_example.py
tutorial/: tutorial.ipynb
