[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dukes"
version = "1.0.3"
description = "Diffuse boosted dark matter from supernova neutrinos in early Universe"
readme = "README.md"
authors = [{ name = "Yen-Hsun Lin", email = "yenhsun@phys.ncku.edu.tw" }]
license = { file = "LICENSE" }
dependencies = [
    "numpy >= 1.20.0",
    "scipy >= 1.10.0",
    "vegas >= 6.0.1",]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/yenhsunlin/dukes"

[tool.bumpver]
current_version = "1.0.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]

#"README.md" = [
#    "{version}",
#    "{pep440_version}",
#]

"src/dukes/__init__.py" = [
    "{version}",
]

